test_data/neg/ss/655285/Windows/655285.acc.rtf
#DeepConCNF_SAS: three-state solvent accessibility prediction results 
#probabilities are in the order of B (Bury, pACC: 0-10), M (Medium, pACC: 11-40) and E (Exposed, pACC: 41-100), 
#where pACC is the relative solvent accessibility value calculated by DSSP 
   1 M E   0.004 0.045 0.951 
   2 Q E   0.019 0.195 0.786 
   3 Y E   0.186 0.394 0.419 
   4 A E   0.171 0.330 0.499 
   5 I B   0.377 0.249 0.374 
   6 A B   0.397 0.278 0.325 
   7 G E   0.365 0.238 0.397 
   8 W B   0.379 0.329 0.292 
   9 P E   0.353 0.279 0.367 
  10 V B   0.367 0.325 0.308 
  11 A B   0.422 0.237 0.341 
  12 G E   0.238 0.312 0.450 
  13 C B   0.420 0.325 0.256 
  14 P E   0.183 0.308 0.510 
  15 S E   0.158 0.346 0.496 
  16 E E   0.038 0.242 0.720 
  17 S E   0.241 0.362 0.397 
  18 L M   0.272 0.471 0.258 
  19 L B   0.443 0.349 0.208 
  20 E E   0.031 0.297 0.672 
  21 R E   0.030 0.360 0.610 
  22 I B   0.636 0.275 0.089 
  23 T M   0.368 0.520 0.112 
  24 R E   0.025 0.281 0.695 
  25 K M   0.120 0.644 0.236 
  26 L B   0.924 0.067 0.009 
  27 R M   0.111 0.743 0.146 
  28 D E   0.029 0.398 0.574 
  29 G B   0.854 0.133 0.012 
  30 W B   0.926 0.067 0.006 
  31 K E   0.013 0.392 0.595 
  32 R M   0.054 0.591 0.355 
  33 L B   0.848 0.130 0.022 
  34 I B   0.614 0.342 0.044 
  35 D E   0.030 0.349 0.621 
  36 I B   0.636 0.304 0.060 
  37 L B   0.723 0.238 0.039 
  38 N E   0.077 0.418 0.505 
  39 Q M   0.105 0.488 0.406 
  40 P E   0.003 0.086 0.911 
  41 G E   0.026 0.151 0.823 
  42 V M   0.090 0.476 0.434 
  43 P E   0.235 0.256 0.509 
  44 K E   0.009 0.136 0.854 
  45 N E   0.063 0.214 0.723 
  46 G E   0.077 0.250 0.673 
  47 S E   0.052 0.194 0.754 
  48 N E   0.105 0.282 0.613 
  49 T E   0.139 0.208 0.653 
  50 Y E   0.172 0.292 0.536 
  51 G E   0.135 0.216 0.649 
  52 Y E   0.138 0.383 0.480 
  53 P E   0.034 0.170 0.796 
  54 D E   0.007 0.072 0.921 
